syntax = "proto3";

option csharp_namespace = "Synergy.StandardApps.Worker";

import "google/protobuf/timestamp.proto";

package alarm;

// The greeting service definition.
service AlarmAdder {
  // Sends a greeting
  rpc AddAlarm (AlarmRequest) returns (AlarmReply);
  rpc DeleteAlarm (AlarmDeleteRequest) returns (AlarmReply);
  rpc EnableAlarm (AlarmEnableRequest) returns (AlarmReply);
}

// The request message containing the user's name.
message AlarmRequest {
	sint64 id = 1;
	string name = 2;
	google.protobuf.Timestamp time = 3;
	uint32 day_mask = 4;
}

message AlarmDeleteRequest{
	sint64 id = 1;
}

message AlarmEnableRequest{
	AlarmRequest alarm = 1;
	bool is_enabled = 2;
}

// The response message containing the greetings.
message AlarmReply {
}
